--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>Welcome to Kittenmania!</title>
     <script src="js/vendor/modernizr.js"></script>
 
     <!-- CSS -->
@@ -26,32 +26,36 @@
             <ul class="head_contact fa-ul right">
                 <li><i class="fa-li fa fa-phone fa-flip-horizontal flipped"></i>202.555.9876</li>
                 <li><i class="fa-li fa fa-envelope"></i>info@websitedomain.com</li>
-                <li><i class="fa fa-twitter twiticon"></i> <i class="fa fa-linkedin linkicon"></i> <i class="fa fa-facebook-official faceicon"></i></li>
+                <li><a href="#"><i class="fa fa-twitter twiticon"></i></a>
+                    <a href="#"><i class="fa fa-linkedin linkicon"></i></a>
+                    <a href="#"> <i class="fa fa-facebook-official faceicon"></i></a>
+                </li>
             </ul>
-            <nav class="top-bar right" data-topbar role="navigation">
-                <section class="top-bar-section left-align">
-                    <!-- Right Nav Section -->
-                    <ul class="small-centered">
-                        <li><a href="#">ABOUT US</a></li>
-                        <li class="has-dropdown">
-                            <a href="#">OUR SERVICES</a>
-                            <ul class="dropdown">
-                                <li><a href="#">PURRING</a></li>
-                                <li><a href="#">PLAYING</a></li>
-                                <li><a href="#">CHASING <br>BIRDS</a></li>
-                                <li><a href="#">CUDDLING</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">TESTIMONIALS</a></li>
-                        <li><a href="#">BLOG</a></li>
-                        <li><a href="#">CONTACT US</a></li>
-                    </ul>
-                </section>
-            </nav>
         </div>
-
     </div>
-
+    <nav class="top-bar tab-bar right" data-topbar role="navigation">
+        <section class="top-bar-section left-align">
+            <!-- Right Nav Section -->
+            <ul class="small-centered">
+                <li><a href="#">ABOUT US</a></li>
+                <li class="has-dropdown">
+                    <a href="#">OUR SERVICES</a>
+                    <ul class="dropdown">
+                        <li><a href="#">PURRING</a></li>
+                        <li><a href="#">PLAYING</a></li>
+                        <li><a href="#">CHASING <br>BIRDS</a></li>
+                        <li><a href="#">CUDDLING</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">TESTIMONIALS</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">CONTACT US</a></li>
+                <li class="toggle-topbar">
+                    <a class="menu-icon" href="#"><span>MENU</span></a>
+                </li>
+            </ul>
+        </section>
+    </nav>
 </header>
 <div class="row full">
     <ul data-options="animation_speed:1500;" data-orbit>
@@ -126,7 +130,7 @@
             </div>
         </form>
     </div>
-    <div class="small-4 small-offset-1 columns">
+    <div class="small-4 small-offset-1 columns twit_collapse">
         <div class="twitter">
             <h2>Our Latest Tweets</h2>
             <a class="twitter-timeline" data-chrome="nofooter noheader transparent" data-border-color="#c0984b" data-tweet-limit="3" href="https://twitter.com/EmrgencyKittens/favorites" data-widget-id="563696126080352257">Favorite Tweets by @EmrgencyKittens</a>
@@ -150,7 +154,10 @@
             <ul class="fa-ul">
                 <li><i class="fa-li fa fa-phone fa-flip-horizontal flipped"></i>202.555.9876</li>
                 <li><i class="fa-li fa fa-envelope"></i>info@websitedomain.com</li>
-                <li><i class="fa-li fa fa-twitter"></i><i class="fa fa-linkedin"></i><i class="fa fa-facebook-square"></i></li>
+                <li><a href="#"><i class="fa-li fa fa-twitter"></i></a>
+                    <a href="#"> <i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fa fa-facebook-square"></i></a>
+                </li>
 
             </ul>
         </div>
