--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
+<!--  Meta
+================================================== -->
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Kittenmania!</title>
-    <script src="js/vendor/modernizr.js"></script>
 
-    <!-- CSS -->
+<!--  CSS
+================================================== -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/foundation.css" />
 
-    <!-- SCRIPTS -->
+<!--  Scripts
+================================================== -->
+    <script src="js/vendor/modernizr.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//use.typekit.net/wxt6ocg.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
+
+<!--  Header
+================================================== -->
 <header>
     <div class="small-2 small-offset-1 columns left-align">
         <h1>LOGO</h1>
@@ -33,6 +41,9 @@
             </ul>
         </div>
     </div>
+
+<!--  Navigation
+================================================== -->
     <nav class="top-bar tab-bar right" data-topbar role="navigation">
         <section class="top-bar-section left-align">
             <!-- Right Nav Section -->
@@ -57,6 +68,9 @@
         </section>
     </nav>
 </header>
+
+<!--  Slider
+================================================== -->
 <div class="row full">
     <ul data-options="animation_speed:1500;" data-orbit>
         <li>
@@ -84,6 +98,9 @@
     </div>
 </div>
 <div class="row collapse body">
+
+<!--  Form
+================================================== -->
     <div class="small-7 columns form">
         <h2>Contact Us Now!</h2>
         <form action="mail.php" method="POST">
@@ -126,10 +143,12 @@
                 <input type="submit" value="SUBMIT">
             </div>
             <div class="small-4 small-offset-1 columns">
-
             </div>
         </form>
     </div>
+
+<!--  Twitter Feed
+================================================== -->
     <div class="small-4 small-offset-1 columns twit_collapse">
         <div class="twitter">
             <h2>Our Latest Tweets</h2>
@@ -141,8 +160,9 @@
 
 </div>
 
+<!--  Footer
+================================================== -->
 <footer>
-
     <div class="row">
         <div class="large-4 columns foot_logo">
             <h1>LOGO</h1>
